src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Rally</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Client Rescinded</fullName>
        </values>
        <values>
            <fullName>Closed - Other</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Decline to Quote</fullName>
        </values>
        <values>
            <fullName>Finalist</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FContracting%2FBAFO</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>RFP Stage</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>BAFO%2FFinal Configuration</fullName>
        </values>
        <values>
            <fullName>Closed - Other</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed%2FRetained</fullName>
        </values>
        <values>
            <fullName>Contract Negotiations</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
        <values>
            <fullName>Review</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Amount1__c</fullName>
        <formula>(Recurring_Amount__c * 12)+Total_Implementation_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Amount__c</fullName>
        <formula>Amount*12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <description>Created to enhance reasoning for closing or winning opportunities.</description>
        <inlineHelpText>Select one or more reasons for winning or losing an opportunity from list. Select other if none are applicable.</inlineHelpText>
        <label>Close Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Lost: Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost: Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost: Product Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost: Integration Capabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won: Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won: Product Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won: Integration Capabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won: Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won: Multi-Product Offering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won: International Capabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won: Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Closed_Other_Reason__c</fullName>
        <label>Closed - Other Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Current Incumbent</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redbrick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virgin Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shape up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welltok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zenefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castlight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ChangeHealth	Vitals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolkitDoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HealthSparq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluebook Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Consulting_House__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consulting House</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Consultant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consulting Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Covered_Lives_Type__c</fullName>
        <label>Covered Lives Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Members</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patients</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Covered_Lives__c</fullName>
        <label>Covered Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <inlineHelpText>Please select the event that led to this opportunity. If the event is not listed, please file a JIRA ticket to get it added to the picklist.</inlineHelpText>
        <label>Event Name</label>
        <picklist>
            <picklistValues>
                <fullName>AHIP Austin 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANI HFMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEAC Spring 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orlando 2017</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <label>Executive Sponsor</label>
        <picklist>
            <picklistValues>
                <fullName>Alex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anastasios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Ko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rhett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shawn Mobley</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Annual_Revenue_Year_1__c</fullName>
        <formula>If( ISPICKVAL(Purchase_Type__c, &apos;Licensing Fee&apos;),  
((Recurring_Amount_Year_1__c/12)*
If(NOT(ISBLANK(YEAR(Go_Live__c))), 13 - MONTH(Go_Live__c),0))
, 
If( ISPICKVAL(Purchase_Type__c, &apos;PMPM&apos;), 
((Recurring_Amount__c/12)*
 If(NOT(ISBLANK(Go_Live__c)), 13 - MONTH(Go_Live__c),0)
+ One_time_Fee_Year_1__c),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Annual Revenue Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Annual_Revenue_Year_2__c</fullName>
        <formula>If( ISPICKVAL(Purchase_Type__c, &apos;Licensing Fee&apos;), 
((Recurring_Amount_Year_2__c/12)* 
If(Membership_Term__c =1, MONTH(Go_Live__c), 
If(Membership_Term__c &gt;= 2, 12,0))), 
If( ISPICKVAL(Purchase_Type__c, &apos;PMPM&apos;), 
((Recurring_Amount__c/12)* 
 If(Membership_Term__c =1, MONTH(Go_Live__c), 
If(Membership_Term__c &gt;= 2, 12,0))+ One_Time_Fee_Year_2__c),0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Annual Revenue Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Annual_Revenue_Year_3__c</fullName>
        <formula>If( ISPICKVAL(Purchase_Type__c, &apos;Licensing Fee&apos;), 
((Recurring_Amount_Year_3__c/12)* 
If(Membership_Term__c =2, MONTH(Go_Live__c), 
If(Membership_Term__c &gt;= 3, 12,0))), 
If( ISPICKVAL(Purchase_Type__c, &apos;PMPM&apos;), 
((Recurring_Amount__c/12)* 
If(Membership_Term__c =2, MONTH(Go_Live__c), 
If(Membership_Term__c &gt;= 3, 12,0))+ One_Time_Fee_Year_3__c),0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Annual Revenue Year 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Annual_Revenue__c</fullName>
        <formula>((Recurring_Amount__c*12)+Total_Implementation_Fees__c)*Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Consultant_Name__c</fullName>
        <label>External Consultant Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Partner_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Partner ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Sales_Category__c</fullName>
        <label>External Sales Category</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Sales_Channel__c</fullName>
        <label>External Sales Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <picklist>
            <picklistValues>
                <fullName>PMPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Year_Revenue__c</fullName>
        <label>First Year Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Go_Live__c</fullName>
        <inlineHelpText>When the client goes live.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hot_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this if you want this opportunity included in the weekly executive summary.</description>
        <inlineHelpText>Select this if you want this opportunity included in the weekly executive summary.</inlineHelpText>
        <label>Hot Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Stage__c</fullName>
        <label>Post Sales Status</label>
        <picklist>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rollout Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rollout Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Include_in_Partner_Revenue_Query__c</fullName>
        <formula>IF(
AND(
NOT(ISBLANK(External_Partner_ID__c)),
OR(
NOT(IsClosed),
AND(
CloseDate &gt; TODAY()-365,
CloseDate &lt;= TODAY()+365))), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include in Partner Revenue Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Included_in_Ken_s_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this has been included in Ken&apos;s plan</description>
        <inlineHelpText>Check this box if this has been included in Ken&apos;s plan</inlineHelpText>
        <label>Included in Ken&apos;s Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Optum__c</fullName>
        <formula>NOT(ISBLANK(External_Partner_ID__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Optum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <description>Level of effort (low, medium, high)</description>
        <inlineHelpText>Select the level of effort required to win this opportunity. Default value is low.</inlineHelpText>
        <label>Level of Effort</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Payers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Delivery Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Membership_Term__c</fullName>
        <defaultValue>3</defaultValue>
        <inlineHelpText>*In Years* - Default to 3</inlineHelpText>
        <label>Membership Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <inlineHelpText>What are your next steps for this account? Max characters of 98,304.</inlineHelpText>
        <label>Next Steps</label>
        <length>98304</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Obstacles__c</fullName>
        <description>What are the obstacles we will face in order to close-win this opportunity?</description>
        <inlineHelpText>Select one or more obstacles that can hinder our chances of winning this opportunity.</inlineHelpText>
        <label>Obstacles</label>
        <picklist>
            <picklistValues>
                <fullName>Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UHG relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenges (Variety)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Capabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>One_Time_Fee_Year_2__c</fullName>
        <label>One Time Fee Year 2</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Type__c</field>
            <operation>equals</operation>
            <value>Add-On</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Sub_Type__c</field>
            <operation>equals</operation>
            <value>One Time Fee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Year_2__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>One_Time_Fee_Year_3__c</fullName>
        <label>One Time Fee Year 3</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Sub_Type__c</field>
            <operation>equals</operation>
            <value>One Time Fee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Type__c</field>
            <operation>equals</operation>
            <value>Add-On</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Year_3__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>One_time_Fee_Year_1__c</fullName>
        <label>One time Fee Year 1</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Type__c</field>
            <operation>equals</operation>
            <value>Add-On</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Sub_Type__c</field>
            <operation>equals</operation>
            <value>One Time Fee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Year_1__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Optum_Lives__c</fullName>
        <label>Optum Lives</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Optum_One_Time_Revenue__c</fullName>
        <label>Optum One Time Revenue</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.External_Product_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.One_Time_Purchase__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Optum_Revenue_2017__c</fullName>
        <formula>(Recurring_Revenue__c*12) + Optum_One_Time_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Optum Revenue - 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Optum_Stage__c</fullName>
        <formula>CASE(TEXT(StageName), &apos;1 Qualify&apos;, &apos;A - Qualify&apos;, &apos;2 Propose&apos;, &apos;B - Propose&apos;, &apos;3 Review&apos;, &apos;C - Review&apos;,&apos;4 Contract&apos;,&apos;D - Contract&apos;,&apos;6 Booked&apos;,&apos;E - Booked&apos;,&apos;Z - Not Sold&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Optum Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_L1_Name__c</fullName>
        <label>Owner L1 Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_L2_Name__c</fullName>
        <label>Owner L2 Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_L3_Name__c</fullName>
        <label>Owner L3 Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Total_Revenue__c</fullName>
        <label>Package Total Revenue</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Type__c</field>
            <operation>equals</operation>
            <value>Package</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pain_Points_Missing_Functionality__c</fullName>
        <description>Use this area to elaborate on obstacles and challenges. Include functionality being requested that does not already exist within the product.</description>
        <inlineHelpText>Use this area to elaborate on obstacles and challenges. Include functionality being requested that does not already exist within the product.</inlineHelpText>
        <label>Obstacles &amp; Challenges</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pilot_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pilot Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Configuration_Notes__c</fullName>
        <label>Product Configuration Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Requirements__c</fullName>
        <description>Use this field to enter in any requirements (whether it is a current functionality or something that will need to be built)</description>
        <inlineHelpText>Use this field to enter in any requirements (whether it is a current functionality or something that will need to be built)</inlineHelpText>
        <label>Product Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purchase_Type__c</fullName>
        <label>Purchase Type</label>
        <picklist>
            <picklistValues>
                <fullName>Licensing Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMPM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>IF(
CONTAINS(RecordType.Name,&apos;Approved&apos;), SUBSTITUTE(RecordType.Name, &apos; Approved&apos;, &apos;&apos;), RecordType.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Amount_Year_1__c</fullName>
        <label>Recurring Amount Year 1</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Sub_Type__c</field>
            <operation>notEqual</operation>
            <value>One Time Fee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Type__c</field>
            <operation>notEqual</operation>
            <value>Add-On</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Year_1__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recurring_Amount_Year_2__c</fullName>
        <label>Recurring Amount Year 2</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Year_2__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Sub_Type__c</field>
            <operation>notEqual</operation>
            <value>One Time Fee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Type__c</field>
            <operation>notEqual</operation>
            <value>Add-On</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recurring_Amount_Year_3__c</fullName>
        <label>Recurring Amount Year 3</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Year_3__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Sub_Type__c</field>
            <operation>notEqual</operation>
            <value>One Time Fee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Type__c</field>
            <operation>notEqual</operation>
            <value>Add-On</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recurring_Amount__c</fullName>
        <label>Recurring Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Type__c</field>
            <operation>notEqual</operation>
            <value>Implementation Fee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Sub_Type__c</field>
            <operation>notEqual</operation>
            <value>One Time Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recurring_Amount_new__c</fullName>
        <formula>(IF( ISPICKVAL(Purchase_Type__c,&apos;Licensing Fee&apos;),  Package_Total_Revenue__c/Recurring_Line_Count__c, Package_Total_Revenue__c*12) + Total_Implementation_Fees__c)*Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Line_Count__c</fullName>
        <label>Recurring Line Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Type__c</field>
            <operation>equals</operation>
            <value>Package</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>